--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     padding-left: 10px;
 }
 
+.recently-uploaded {
+    width: 100%;
+}
+
 .bg-navbar {
     background-color: #f7cb07;
     padding: 5px;
@@ -56,6 +60,14 @@
     padding: 5px;
 }
 
+.left-ui {
+    background-color: white;
+}
+
+.left-ui-black {
+    background-color: black;
+}
+
 .pdf {
     width: 70px;
 }
@@ -63,6 +75,7 @@
 .each-recent {
     width: 100px;
     text-align: center;
+    padding-right: 15px;
 }
 
 .horizontal-line {
@@ -70,7 +83,7 @@
 }
 
 .sun-life-logo {
-    width: 40%;
+    width: 200px;
     padding: 25px;
 }
 
@@ -85,20 +98,20 @@
 .borders {
     border-style: solid;
     border-width: 1px;
-    width: 70%;
+    width: 50%;
     border-bottom-width: 0px;
 }
 
 .borders-last {
     border-style: solid;
     border-width: 1px;
-    width: 70%;
+    width: 50%;
 }
 
 .bars-borders {
     border-style: solid;
     border-width: 1px;
-    width: 30%;
+    width: 50%;
     border-left-width: 0px;
     border-bottom-width: 0px;
 }
@@ -106,7 +119,7 @@
 .bars-borders-last {
     border-style: solid;
     border-width: 1px;
-    width: 30%;
+    width: 50%;
     border-left-width: 0px;
 }
 
@@ -117,6 +130,19 @@
     border-width: 1px;
     border-color: grey;
 
+}
+
+.upload-options {
+    display: flex;
+    flex-direction: row;
+}
+
+@media screen and (max-width: 576px) {
+    .upload-options {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .logo-section-heading {
@@ -138,6 +164,25 @@
     padding: 20px;
     width: 200px;
     margin: 5px;
+}
+
+@media screen and (max-width:400px) {
+    .small-device {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .dec-life-logo {
+        width: 100px;
+    }
+
+    .sun-life-logo {
+        width: 100px;
+    }
+}
+
+.report-division {
+    background-color: black;
 }
 
 .input-search {
